add openapi freeze test